<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tiled">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="pwr.kasztelanic.app1.MainActivity">

        <TextView
            android:id="@+id/massTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/massET"
            android:layout_alignStart="@+id/heightTV"
            android:layout_toStartOf="@+id/massET"
            android:text="@string/massc"/>

        <EditText
            android:id="@+id/massET"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/view_horizontal_margin"
            android:layout_marginRight="@dimen/view_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/mass"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            />

        <Spinner
            android:id="@+id/massUnitSpinner"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/massET"
            android:layout_alignStart="@+id/heightUnitSpinner"
            android:layout_toEndOf="@+id/massET"
            android:drawSelectorOnTop="true"
            android:entries="@array/mass_units"
            android:spinnerMode="dropdown"/>


        <TextView
            android:id="@+id/heightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/heightET"
            android:layout_toStartOf="@+id/heightET"
            android:text="@string/heightc"/>

        <EditText
            android:id="@+id/heightET"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/massET"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/view_horizontal_margin"
            android:layout_marginRight="@dimen/view_horizontal_margin"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/heightUnitSpinner"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/heightET"
            android:layout_toEndOf="@+id/heightET"
            android:entries="@array/height_units"
            android:spinnerMode="dropdown"/>

        <Button
            android:id="@+id/calculateBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heightET"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/view_vertical_margin_big"
            android:onClick="calculateOnClick"
            android:paddingLeft="@dimen/button_horizontal_padding"
            android:paddingRight="@dimen/button_horizontal_padding"
            android:text="@string/calculate"/>

        <TextView
            android:id="@+id/yourResultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calculateBt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/view_vertical_margin_big"
            android:text="@string/bmi"
            android:textSize="@dimen/your_result_tv_text_size"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yourResultTV"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/result_tv_text_size"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/resultCommentTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resultTV"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/result_comment_tv_text_size"
            android:visibility="invisible"/>
    </RelativeLayout>
</ScrollView>
