<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="pwr.kasztelanic.app1.MainActivity">

    <item
        android:id="@+id/save_mi"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/save"/>

    <item
        android:id="@+id/reset_mi"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/reset"/>

    <item
        android:id="@+id/share_mi"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/share"/>

    <item
        android:id="@+id/about_mi"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/about"/>
</menu>